crates/solidity/testing/snapshots/bindings_output/expressions/type_expr/generated/v2/0.5.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
   ╭─[input.sol:4:23]
   │
 4 │         string name = type(Test).name;
   │                       ───────┬───────  
   │                              ╰───────── Error occurred here.
───╯
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or DecimalLiteral or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or HexLiteral or Identifier or IntKeyword or NewKeyword or OpenBracket or OpenParen or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or UfixedKeyword or UintKeyword.
   ╭─[input.sol:5:24]
   │
 5 │         Answer first = type(Answer).min;
   │                        ────────┬───────  
   │                                ╰───────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (7):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["Answer" @ input.sol:2:10] (enum)
- Def: #3 ["Yes" @ input.sol:2:19] (enum member of Answer)
- Def: #4 ["No" @ input.sol:2:24] (enum member of Answer)
- Def: #5 ["testFunc" @ input.sol:3:14] (function, type: function () returns void)
- Def: #6 ["name" @ input.sol:4:16] (variable, type: unresolved)
- Def: #7 ["first" @ input.sol:5:16] (variable, type: Answer)

------------------------------------------------------------------------

References (1):
- Ref: ["Answer" @ input.sol:5:9] -> #2

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     enum Answer { Yes, No }
   │          ───┬──   ─┬─  ─┬  
   │             ╰────────────── name: 2
   │                    │    │  
   │                    ╰─────── name: 3
   │                         │  
   │                         ╰── name: 4
 3 │     function testFunc() {
   │              ────┬───  
   │                  ╰───── name: 5
 4 │         string name = type(Test).name;
   │                ──┬─  
   │                  ╰─── name: 6
 5 │         Answer first = type(Answer).min;
   │         ───┬── ──┬──  
   │            ╰────────── ref: 2
   │                  │    
   │                  ╰──── name: 7
───╯
